# Coordinate-Systems-for-Physic

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
cosphy/: cartesian.cpp  cartesian.hpp
doc/html/: classcosphy_1_1_cartesian-members.html  classcosphy_1_1_sperical-members.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  sperical_8hpp_source.html
doc/html/search/: classes_1.js
doc/latex/: annotated.tex  classcosphy_1_1_sperical.tex
docs/: CMakeLists.txt  Doxyfile.in  cartesian_8hpp_source.html  classcosphy_1_1_sperical.html
docs/html/: annotated.html  classcosphy_1_1_cartesian.html  index.html
docs/html/search/: all_0.js  all_1.js  classes_0.js
docs/latex/: classcosphy_1_1_cartesian.tex  refman.tex
include/: cartesian.hpp  sperical.hpp
source/: cartesian.cpp  sperical.cpp
test/: CMakeLists.txt
test/source/: test_cartesian.cpp  test_sperical.cpp
